# beko-translate

./: .gitignore  AGENTS.md  README.md  build.py  main.py  pyproject.toml  release-log.md
.github/workflows/: ci.yaml
beko_translate/: __init__.py  cli.py  pdf_cli.py
beko_translate/translation_models/: __init__.py  base.py  hunyuan.py  plamo.py
cat_translate/: __init__.py  cli.py  pdf_cli.py
neko_translate/: __init__.py  cli.py  pdf_cli.py  translation_models.py
neko_translate/translation_models/: __init__.py  cat.py
scripts/: auto_pdf_translate.py  translate.py
tests/: test_cli_unit.py  test_integration_mlx.py  test_smoke.py  test_translation_models.py
