[project]
name = "cat-translate-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cat-translate = "cat_translate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cat_translate"]

[dependency-groups]
dev = [
    "fast-langdetect>=1.0.0",
    "mlx-lm>=0.29.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "torch>=2.10.0",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
markers = [
    "integration: runs MLX model integration tests (requires RUN_MLX_INTEGRATION=1)",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv>=1.29.0
parallel = auto
parallel_show_output = true
env_list = py312, lint, type

[testenv]
commands = uv run pytest {posargs}

[testenv:lint]
commands = uv run ruff check .

[testenv:type]
commands = uv run ty check
"""
